<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp" />

    <Button android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ButtonClick" />

    <CheckBox
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"

        android:text="@string/CheckBox"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"

        android:src="@drawable/flag"
        android:contentDescription="@string/flagName" />

    <Switch

        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"

        android:text="@string/SwitchName" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"

        android:layout_columnSpan="2"

        android:inputType="textPersonName"
        android:hint="@string/hint" />


</GridLayout>
