<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/menu_home"
        android:orderInCategory="100"
        app:showAsAction="always"/>


    <item
        android:id="@+id/menu_favourite"
        android:title="@string/menu_bookmarks"
        android:icon="@drawable/menu_favorate"
        android:orderInCategory="300"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:icon="@drawable/menu_help"
        android:orderInCategory="400"
        app:showAsAction="always"/>

</menu>