<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".carcharing_locations.CarCharingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lat"/>
        <EditText
            android:id="@+id/edt_lat"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="80dp"
            android:layout_height="50dp"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lon"/>
        <EditText
            android:id="@+id/edt_lon"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="80dp"
            android:layout_height="50dp"
            />
        <Button
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_find"/>
        <Button
            android:id="@+id/btn_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lst_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/loading_locations"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="visible"

            />
    </LinearLayout>

</LinearLayout>